# umu-advanced

./: README.md  project-technical-framework.html  pyproject.toml  requirements.txt
src/lms_client/: __init__.py  auth.py  cli.py  client.py  exceptions.py  timeutil.py
src/lms_client/endpoints/: __init__.py  base.py  courses.py  exams.py  organizations.py  reports.py  resources.py  users.py
src/lms_client/storage/: __init__.py  database.py  exporter.py  models.py
src/web/: __init__.py  app.py  governance_service.py  run.py  sync_service.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: app.html  login.html
