[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lms-client-sdk"
version = "0.1.0"
description = "Python SDK for UMU LMS API reverse-engineered from HAR files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "UMU SDK Developer"}
]
keywords = ["umu", "lms", "api", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
]

[project.scripts]
lms-cli = "lms_client.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/lms_client"]
